--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,28 @@
-#Runtime stage
-FROM eclipse-temurin:17-jdk
+#FROM eclipse-temurin:17-jdk
+#WORKDIR /app
+#COPY --from=builder /app/target/*.jar app.jar
+#EXPOSE  8000
+#ENTRYPOINT ["java", "-jar", "app.jar"]
+
+
+#Buildvaihe (Java Development Kit, kääntäjä)
+FROM  eclipse-temurin:17-jdk AS BUILDER
+WORKDIR /app
+COPY . . 
+RUN ./mvnw clean package -DskipTests
+
+#Paketointivaihe
+FROM ecliplse-temurin:17-jre
 WORKDIR /app
 COPY --from=builder /app/target/*.jar app.jar
-EXPOSE  8000
+EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
+#Buildausohjeet
+#docker build -t spring-hello
+
+#Kontin ajaminen:
+#docker run -p 8080:8080 spring-hello
+
+#Sovelluksen testaaminen selaimessa:
+#http://localhost:8080
